<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragments.RegisterFragment">

    <androidx.cardview.widget.CardView
        android:id="@+id/loginCard"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="20dp"
        app:cardCornerRadius="12dp"
        app:cardElevation="12dp">

        <LinearLayout
            android:layout_width="300dp"
            android:padding="10dp"
            android:layout_gravity="center"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/loginTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/register"
                android:textAlignment="center"
                android:textSize="20sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/unameField"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:autofillHints="username"
                android:ems="10"
                android:hint="@string/username"
                android:inputType="textPersonName"
                android:layout_marginTop="20dp"
                android:textColor="?android:textColorPrimary" />

            <EditText
                android:id="@+id/emailField"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginTop="10dp"
                android:autofillHints="emailAddress"
                android:ems="10"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:textColor="?android:textColorPrimary" />

            <EditText
                android:id="@+id/passwordField"
                android:layout_width="match_parent"
                android:layout_marginTop="10dp"
                android:layout_height="48dp"
                android:autofillHints="password"
                android:textColor="?android:textColorPrimary"
                android:ems="10"
                android:hint="@string/password"
                android:inputType="textPassword" />

            <EditText
                android:id="@+id/passwordField2"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:autofillHints="password"
                android:layout_marginTop="10dp"
                android:ems="10"
                android:hint="@string/re_enter_password"
                android:inputType="textPassword"
                android:textColor="?android:textColorPrimary" />

            <Button
                android:id="@+id/buttonRegister"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/register" />

<!--            <Button-->
<!--                android:id="@+id/buttonSpin"-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:layout_marginTop="20dp"-->
<!--                android:text="spin"-->
<!--                android:theme="@style/ButtonMain" />-->

        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/spinnerBlocker"
        android:elevation="50dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    </androidx.constraintlayout.widget.ConstraintLayout>

    <ProgressBar
        android:id="@+id/loginSpinner"
        style="?android:attr/progressBarStyle"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_gravity="center"
        android:elevation="100dp"
        android:visibility="gone" />

</FrameLayout>