<resources>
    <string name="app_name">Föd</string>
    <!-- Strings related to login -->
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="login">Login</string>
    <string name="login_title">Login or Register</string>
    <string name="register">Register</string>
    <string name="email">Email</string>
    <string name="re_enter_password">Re-enter Password</string>
    <string name="logout">Logout</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="welcome_back">Welcome back!</string>
    <string name="log_in_msg">Log in below to access the app. Click register to create a new account.</string>
    <string name="register_msg">Please enter your information below to create an account.</string>
    <string name="welcome_msg">Welcome to %1$s!</string>
    <!-- Strings related to Home -->
    <string name="home">Home</string>
    <!-- Strings related to Settings -->
    <string name="settings">Settings</string>
    <string name="account_title">Account Settings</string>
    <string name="logout_title">Log Out</string>
    <string name="logout_msg">Log out of your account</string>
    <string name="display_title">Display Settings</string>
    <!-- Strings related to Nutrition -->
    <string name="nutrition">Nutrition</string>
    <string name="nutrition_food">Food</string>
    <string name="nutrition_calories">Calories</string>
    <!-- Strings related to Recipes -->
    <string name="recipes">Recipes</string>
    <string name="recipes_id_input">Recipe ID</string>
    <string name="recipes_name_input">Name</string>
    <string name="recipes_search">Search</string>
    <string name="recipes_instructions">Instructions</string>
    <string name="recipes_add_recipe">ADD RECIPE</string>
    <string name="recipes_new_recipe_title">New Recipe</string>
    <!-- Strings related to Shopping -->
    <string name="shopping_list">Shopping List</string>
    <string name="shopping">Shopping</string>
    <string name="remove">Remove item</string>
    <string name="add_item">ADD ITEM</string>
    <string name="empty">Empty…</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <!-- Food item details page -->
    <string name="food_item_image">Food item image</string>
    <!-- Food item search page -->
    <string name="title_activity_food_search">FoodSearchActivity</string>
    <string name="no_results">No Results</string>

    <string name="lorem_ipsum">
        Lorem ipsum lorem ipsum lorem ipsum lorem ipsum Lorem ipsum lorem ipsum lorem ipsum lorem ipsum
        Lorem ipsum lorem ipsum lorem ipsum lorem ipsum Lorem ipsum lorem ipsum lorem ipsum lorem ipsum
        Lorem ipsum lorem ipsum lorem ipsum lorem ipsum Lorem ipsum lorem ipsum lorem ipsum lorem ipsum
        Lorem ipsum lorem ipsum lorem ipsum lorem ipsum Lorem ipsum lorem ipsum lorem ipsum lorem ipsum
        Lorem ipsum lorem ipsum lorem ipsum lorem ipsum Lorem ipsum lorem ipsum lorem ipsum lorem ipsum
        Lorem ipsum lorem ipsum lorem ipsum lorem ipsum Lorem ipsum lorem ipsum lorem ipsum lorem ipsum
        Lorem ipsum lorem ipsum lorem ipsum lorem ipsum Lorem ipsum lorem ipsum lorem ipsum lorem ipsum
        Lorem ipsum lorem ipsum lorem ipsum lorem ipsum Lorem ipsum lorem ipsum lorem ipsum lorem ipsum
        Lorem ipsum lorem ipsum lorem ipsum lorem ipsum Lorem ipsum lorem ipsum lorem ipsum lorem ipsum
        Lorem ipsum lorem ipsum lorem ipsum lorem ipsum Lorem ipsum lorem ipsum lorem ipsum lorem ipsum
        Lorem ipsum lorem ipsum lorem ipsum lorem ipsum Lorem ipsum lorem ipsum lorem ipsum lorem ipsum
        Lorem ipsum lorem ipsum lorem ipsum lorem ipsum Lorem ipsum lorem ipsum lorem ipsum lorem ipsum
        Lorem ipsum lorem ipsum lorem ipsum lorem ipsum Lorem ipsum lorem ipsum lorem ipsum lorem ipsum
        Lorem ipsum lorem ipsum lorem ipsum lorem ipsum Lorem ipsum lorem ipsum lorem ipsum lorem ipsum
    </string>
    <string name="favorite">FAVORITE</string>
    <string name="title_activity_temp">TempActivity</string>
    <string name="ingredients">Ingredients</string>
    <string name="total_carbs">Total carbs in grams</string>
    <string name="carbs">Carbs</string>
    <string name="fat">Fat</string>
    <string name="total_fat">Total fat in grams</string>
    <string name="calories">Calories</string>
    <string name="total_calories">Calories in kcal</string>
    <string name="protein">Protein</string>
    <string name="total_protein">Total protein in grams</string>
    <string name="barcode_view">Barcode View</string>
    <string name="scan_barcode">Scan Barcode</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="account">Account</string>
    <string name="profile_banner">Profile Banner</string>
    <string name="profile_picture">Profile Picture</string>
    <string name="back">Back</string>
    <string name="bio">Biography</string>
    <string name="follow">FOLLOW</string>
    <string name="edit">Edit</string>
    <string name="add_photo">Add Photo</string>
    <string name="take_photo">Take photo</string>
    <string name="from_gallery">From gallery</string>
    <string name="select_image_source">Select image source</string>
    <string name="save">SAVE</string>
    <string name="title">Title</string>
    <string name="recipe_name">Recipe Name</string>
    <string name="create_recipe">CREATE RECIPE</string>
    <string name="add_image">Add Image</string>
    <string name="add_ingredient">Add Ingredient</string>
    <string name="description">Description</string>
    <string name="quantity">QTY</string>
    <string name="update_recipe">UPDATE RECIPE</string>
    <string name="unfollow">UNFOLLOW</string>
    <string name="switch_user_title">Switch User</string>
    <string name="switch_user_msg">Switch between logged in accounts</string>
    <string name="add_account">ADD ACCOUNT</string>
    <string name="recently_logged_foods">Recently logged foods</string>
    <string name="recipes_for_you">Recipes for you</string>
    <string name="nutrient_image">Nutrient Image</string>
    <string name="left_button">Left Button</string>
    <string name="right_button">Right Button</string>
    <string name="slash">/</string>
    <string name="recipe_image">Recipe Image</string>
    <string name="main_add_button">Main Add Button</string>
    <string name="add_to_shopping_list">Add to shopping list</string>
    <string name="add_to_food_log">Add to food log</string>
    <string name="write_new_recipe">Write new recipe</string>
    <string name="date">Date</string>
    <string name="previous_day">Previous day</string>
    <string name="next_day">Next day</string>
    <string name="breakfast">Breakfast</string>
    <string name="lunch">Lunch</string>
    <string name="dinner">Dinner</string>
    <string name="popular">Popular</string>
    <string name="explore">Explore</string>
    <string name="newText">New</string>
    <string name="comments">Comments</string>
    <string name="show_more"><u>Show more</u></string>
    <string name="show_less"><u>Show less</u></string>
    <string name="delete">Delete</string>
    <string name="menu">Menu</string>
    <string name="change_user_type">Change User Type</string>
    <string name="update">Update</string>
    <string name="cancel">Cancel</string>
    <string name="comment">Comment</string>
    <string name="regular">Regular</string>
    <string name="moderator">Moderator</string>
    <string name="admin">Admin</string>
    <string name="account_badge">Account badge</string>
    <string name="add_a_new_comment">Add a new comment...</string>
    <string name="post">Post</string>
    <string name="notification_category">Notification Settings</string>
    <string name="new_followers_desc">Notifications about new followers</string>
    <string name="new_followers_title">New followers</string>
    <string name="new_for_you_desc">Notifications for recipes posted by people you follow</string>
    <string name="new_for_you_title">New for you</string>
    <string name="likes_comments_desc">Notifications about recipe likes and comments</string>
    <string name="likes_comments_title">Likes and comments</string>
    <string name="select_log">Select meal</string>
    <string name="nothing_yet">Nothing here... yet</string>

</resources>