...
                    android:src="@drawable/ic_left" />

                <TextView
                    android:id="@+id/date"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_toStartOf="@id/next_date_button"
                    android:layout_toEndOf="@id/previous_date_button"
                    android:contentDescription="@string/date"
                    android:gravity="center"
                    android:textSize="24sp" />

                <ImageButton
...
                app:indicatorDirectionLinear="startToEnd"
                app:trackColor="@color/fat"
                app:trackCornerRadius="5dp"
                app:trackThickness="10dp" />

            <androidx.cardview.widget.CardView
                android:id="@+id/breakfastCard"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardCornerRadius="16dp"
                android:visibility="gone"
                android:layout_marginHorizontal="16dp"
                android:layout_marginBottom="16dp"
...
